hphp/test/quick/parse_fail_strict_hashbang_whitespace_start.php.expectf

Fatal error: HH mode: content before <?hh (Line: 2, Char: 1)
syntax error, unexpected T_HH_ERROR, expecting $end in %s on line 2
